tests/pass/constructor/default.tox
class Foo {}

fn main() {
    let foo = Foo {};
    print(foo); //expect:instance
}