tests/fail/enum/unify.tox
enum List {
    Head(int),
    Tail
}

enum List2 {
    Head(int),
    Tail
}

fn main() {
    let foo:List = List2::Tail;
}